# python-telegram-chatbot

./: .env.example  .gitignore  Makefile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  make.sh  pyproject.toml
chatapp/: asgi.py  celery.py  context_processor.py  settings.py  urls.py  wsgi.py
database/seeders/: media_seeder.py  user_seeder.py
docker/: .env.example  Dockerfile  docker-compose.override.yml.local  docker-compose.override.yml.prod  docker-compose.yml  docker-composer.override.yml.prod
protectapp/: celery.py  context_processor.py  settings.py  urls.py
scripts/: production_deployment.sh
src/age_verification/: admin.py  views.py
src/age_verification/middlewares/: __init__.py  age_verification_middleware.py
src/age_verification/migrations/: 0001_initial.py
src/age_verification/models/: __init__.py  age_verification.py  age_verification_country.py  creator_agreement.py
src/age_verification/services/: creator_service.py
src/authentication/: signals.py  urls.py
src/chat/: bot.py  urls.py  views.py
src/consent/: admin.py  models.py  views.py
src/core/: urls.py  utils.py  views.py
src/engagement/: models.py
src/media/: admin.py  enums.py  models.py  tasks.py  urls.py  views.py
src/media/models/: media.py  (+1 more)
src/notification/: views.py
src/payment/: admin.py  enums.py  models.py  urls.py  views.py
src/report/: admin.py  models.py
src/storage/: init_storage.py  tasks.py  utils.py
src/user/: models.py  tasks.py  urls.py  views.py
static/css/: base.css
templates/core/: contact.html  layout.html
(+114 files in other folders)
